# desktop-messenger

./: .env.example  Cargo.toml  README.md
src/: main.rs  message.rs  settings.rs  task_queue.rs
src/authenticator/: appsync_api_authenticator.rs  mod.rs
src/message_receiver/: appsync_message_receiver.rs  dummy.rs  mod.rs
src/message_sender/: appsync_message_sender.rs  dummy.rs  mod.rs
src/messenger/: mod.rs
src/ui_connector/: mod.rs  simplified.rs
