[package]
name = "desktop_messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.86"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
base64 = "0.22.1"
futures-util = "0.3.31"
tokio-tungstenite  = { version = "0.26.2", features = ["native-tls"] }
uuid = { version = "1.15.1", features = ["v4"] }
